--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,23 @@
     <string name="action_logout">Logout</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_register">Register</string>
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_first_name">First Name</string>
+    <string name="prompt_email">E-mail (required for confirmation)</string>
+    <string name="prompt_password_confirm">Confirm Password</string>
+    <string name="action_register">Register</string>
+    <string name="msg_register_successful">Registration success. Check your e-mail.</string>
+    <string name="error_register_failed">Registration failed. Please try again.</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_username">This username is invalid</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_passwords_match">Passwords much match</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
 
